@@ -419,100 +419,100 @@
     "SHP[1]",        /*                                     */
     "SHC[0]",        /*                                     */
     "SHC[1]",        /*                                     */
-    "SHZ[0]"         /*                                     */
-    "SHZ[1]"         /*                                     */
-    "SHPIX"          /*                                     */
-    "IP"             /*                                     */
-    "MSIRP[0]"       /*                                     */
-    "MSIRP[1]"       /*                                     */
-    "AlignRP"        /*                                     */
-    "RTDG"           /*                                     */
-    "MIAP[0]"        /*                                     */
-    "MIAP[1]"        /*                                     */
+    "SHZ[0]",        /*                                     */
+    "SHZ[1]",        /*                                     */
+    "SHPIX",         /*                                     */
+    "IP",            /*                                     */
+    "MSIRP[0]",      /*                                     */
+    "MSIRP[1]",      /*                                     */
+    "AlignRP",       /*                                     */
+    "RTDG",          /*                                     */
+    "MIAP[0]",       /*                                     */
+    "MIAP[1]",       /*                                     */
 
-    "NPushB"         /*                                     */
-    "NPushW"         /*                                     */
-    "WS"             /*                                     */
-    "RS"             /*                                     */
-    "WCvtP"          /*                                     */
-    "RCvt"           /*                                     */
-    "GC[0]"          /*                                     */
-    "GC[1]"          /*                                     */
-    "SCFS"           /*                                     */
-    "MD[0]"          /*                                     */
-    "MD[1]"          /*                                     */
-    "MPPEM"          /*                                     */
-    "MPS"            /*                                     */
-    "FlipON"         /*                                     */
-    "FlipOFF"        /*                                     */
-    "DEBUG"          /*                                     */
+    "NPushB",        /*                                     */
+    "NPushW",        /*                                     */
+    "WS",            /*                                     */
+    "RS",            /*                                     */
+    "WCvtP",         /*                                     */
+    "RCvt",          /*                                     */
+    "GC[0]",         /*                                     */
+    "GC[1]",         /*                                     */
+    "SCFS",          /*                                     */
+    "MD[0]",         /*                                     */
+    "MD[1]",         /*                                     */
+    "MPPEM",         /*                                     */
+    "MPS",           /*                                     */
+    "FlipON",        /*                                     */
+    "FlipOFF",       /*                                     */
+    "DEBUG",         /*                                     */
 
-    "LT"             /*                                     */
-    "LTEQ"           /*                                     */
-    "GT"             /*                                     */
-    "GTEQ"           /*                                     */
-    "EQ"             /*                                     */
-    "NEQ"            /*                                     */
-    "ODD"            /*                                     */
-    "EVEN"           /*                                     */
-    "IF"             /*                                     */
-    "EIF"            /*                                     */
-    "AND"            /*                                     */
-    "OR"             /*                                     */
-    "NOT"            /*                                     */
-    "DeltaP1"        /*                                     */
-    "SDB"            /*                                     */
-    "SDS"            /*                                     */
+    "LT",            /*                                     */
+    "LTEQ",          /*                                     */
+    "GT",            /*                                     */
+    "GTEQ",          /*                                     */
+    "EQ",            /*                                     */
+    "NEQ",           /*                                     */
+    "ODD",           /*                                     */
+    "EVEN",          /*                                     */
+    "IF",            /*                                     */
+    "EIF",           /*                                     */
+    "AND",           /*                                     */
+    "OR",            /*                                     */
+    "NOT",           /*                                     */
+    "DeltaP1",       /*                                     */
+    "SDB",           /*                                     */
+    "SDS",           /*                                     */
 
-    "ADD"            /*                                     */
-    "SUB"            /*                                     */
-    "DIV"            /*                                     */
-    "MUL"            /*                                     */
-    "ABS"            /*                                     */
-    "NEG"            /*                                     */
-    "FLOOR"          /*                                     */
-    "CEILING"        /*                                     */
-    "ROUND[0]"       /*                                     */
-    "ROUND[1]"       /*                                     */
-    "ROUND[2]"       /*                                     */
-    "ROUND[3]"       /*                                     */
-    "NROUND[0]"      /*                                     */
-    "NROUND[1]"      /*                                     */
-    "NROUND[2]"      /*                                     */
-    "NROUND[3]"      /*                                     */
+    "ADD",           /*                                     */
+    "SUB",           /*                                     */
+    "DIV",           /*                                     */
+    "MUL",           /*                                     */
+    "ABS",           /*                                     */
+    "NEG",           /*                                     */
+    "FLOOR",         /*                                     */
+    "CEILING",       /*                                     */
+    "ROUND[0]",      /*                                     */
+    "ROUND[1]",      /*                                     */
+    "ROUND[2]",      /*                                     */
+    "ROUND[3]",      /*                                     */
+    "NROUND[0]",     /*                                     */
+    "NROUND[1]",     /*                                     */
+    "NROUND[2]",     /*                                     */
+    "NROUND[3]",     /*                                     */
 
-    "WCvtF"          /*                                     */
-    "DeltaP2"        /*                                     */
-    "DeltaP3"        /*                                     */
-    "DeltaC1"        /*                                     */
-    "DeltaC2"        /*                                     */
-    "DeltaC3"        /*                                     */
-    "SROUND"         /*                                     */
-    "S45Round"       /*                                     */
-    "JROT"           /*                                     */
-    "JROF"           /*                                     */
-    "ROFF"           /*                                     */
+    "WCvtF",         /*                                     */
+    "DeltaP2",       /*                                     */
+    "DeltaP3",       /*                                     */
+    "DeltaC1",       /*                                     */
+    "DeltaC2",       /*                                     */
+    "DeltaC3",       /*                                     */
+    "SROUND",        /*                                     */
+    "S45Round",      /*                                     */
+    "JROT",          /*                                     */
+    "JROF",          /*                                     */
+    "ROFF",          /*                                     */
     "INS_$7B"
-    "RUTG"           /*                                     */
-    "RDTG"           /*                                     */
-    "SANGW"          /*                                     */
-    "AA"             /*                                     */
+    "RUTG",          /*                                     */
+    "RDTG",          /*                                     */
+    "SANGW",         /*                                     */
+    "AA",            /*                                     */
 
-    "FlipPT"         /*                                     */
-    "FlipRgON"       /*                                     */
-    "FlipRgOFF"      /*                                     */
+    "FlipPT",        /*                                     */
+    "FlipRgON",      /*                                     */
+    "FlipRgOFF",     /*                                     */
     "INS_$83"
     "INS_$84"
-    "ScanCTRL"       /*                                     */
-    "SDPVTL[0]"      /*                                     */
-    "SDPVTL[1]"      /*                                     */
-    "GetINFO"        /*                                     */
-    "IDEF"           /*                                     */
-    "ROLL"           /*                                     */
-    "MAX"            /*                                     */
-    "MIN"            /*                                     */
-    "ScanTYPE"       /*                                     */
-    "InstCTRL"       /*                                     */
+    "ScanCTRL",      /*                                     */
+    "SDPVTL[0]",     /*                                     */
+    "SDPVTL[1]",     /*                                     */
+    "GetINFO",       /*                                     */
+    "IDEF",          /*                                     */
+    "ROLL",          /*                                     */
+    "MAX",           /*                                     */
+    "MIN",           /*                                     */
+    "ScanTYPE",      /*                                     */
+    "InstCTRL",      /*                                     */
     "INS_$8F"
 
     "INS_$90"
@@ -549,89 +549,89 @@
     "INS_$AE"
     "INS_$AF"
 
-    "PushB[0]"       /*                                     */
-    "PushB[1]"       /*                                     */
-    "PushB[2]"       /*                                     */
-    "PushB[3]"       /*                                     */
-    "PushB[4]"       /*                                     */
-    "PushB[5]"       /*                                     */
-    "PushB[6]"       /*                                     */
-    "PushB[7]"       /*                                     */
-    "PushW[0]"       /*                                     */
-    "PushW[1]"       /*                                     */
-    "PushW[2]"       /*                                     */
-    "PushW[3]"       /*                                     */
-    "PushW[4]"       /*                                     */
-    "PushW[5]"       /*                                     */
-    "PushW[6]"       /*                                     */
-    "PushW[7]"       /*                                     */
+    "PushB[0]",      /*                                     */
+    "PushB[1]",      /*                                     */
+    "PushB[2]",      /*                                     */
+    "PushB[3]",      /*                                     */
+    "PushB[4]",      /*                                     */
+    "PushB[5]",      /*                                     */
+    "PushB[6]",      /*                                     */
+    "PushB[7]",      /*                                     */
+    "PushW[0]",      /*                                     */
+    "PushW[1]",      /*                                     */
+    "PushW[2]",      /*                                     */
+    "PushW[3]",      /*                                     */
+    "PushW[4]",      /*                                     */
+    "PushW[5]",      /*                                     */
+    "PushW[6]",      /*                                     */
+    "PushW[7]",      /*                                     */
 
-    "MDRP[G]"        /*                                     */
-    "MDRP[B]"        /*                                     */
-    "MDRP[W]"        /*                                     */
-    "MDRP[?]"        /*                                     */
-    "MDRP[rG]"       /*                                     */
-    "MDRP[rB]"       /*                                     */
-    "MDRP[rW]"       /*                                     */
-    "MDRP[r?]"       /*                                     */
-    "MDRP[mG]"       /*                                     */
-    "MDRP[mB]"       /*                                     */
-    "MDRP[mW]"       /*                                     */
-    "MDRP[m?]"       /*                                     */
-    "MDRP[mrG]"      /*                                     */
-    "MDRP[mrB]"      /*                                     */
-    "MDRP[mrW]"      /*                                     */
-    "MDRP[mr?]"      /*                                     */
-    "MDRP[pG]"       /*                                     */
-    "MDRP[pB]"       /*                                     */
+    "MDRP[G]",       /*                                     */
+    "MDRP[B]",       /*                                     */
+    "MDRP[W]",       /*                                     */
+    "MDRP[?]",       /*                                     */
+    "MDRP[rG]",      /*                                     */
+    "MDRP[rB]",      /*                                     */
+    "MDRP[rW]",      /*                                     */
+    "MDRP[r?]",      /*                                     */
+    "MDRP[mG]",      /*                                     */
+    "MDRP[mB]",      /*                                     */
+    "MDRP[mW]",      /*                                     */
+    "MDRP[m?]",      /*                                     */
+    "MDRP[mrG]",     /*                                     */
+    "MDRP[mrB]",     /*                                     */
+    "MDRP[mrW]",     /*                                     */
+    "MDRP[mr?]",     /*                                     */
+    "MDRP[pG]",      /*                                     */
+    "MDRP[pB]",      /*                                     */
 
-    "MDRP[pW]"       /*                                     */
-    "MDRP[p?]"       /*                                     */
-    "MDRP[prG]"      /*                                     */
-    "MDRP[prB]"      /*                                     */
-    "MDRP[prW]"      /*                                     */
-    "MDRP[pr?]"      /*                                     */
-    "MDRP[pmG]"      /*                                     */
-    "MDRP[pmB]"      /*                                     */
-    "MDRP[pmW]"      /*                                     */
-    "MDRP[pm?]"      /*                                     */
-    "MDRP[pmrG]"     /*                                     */
-    "MDRP[pmrB]"     /*                                     */
-    "MDRP[pmrW]"     /*                                     */
-    "MDRP[pmr?]"     /*                                     */
+    "MDRP[pW]",      /*                                     */
+    "MDRP[p?]",      /*                                     */
+    "MDRP[prG]",     /*                                     */
+    "MDRP[prB]",     /*                                     */
+    "MDRP[prW]",     /*                                     */
+    "MDRP[pr?]",     /*                                     */
+    "MDRP[pmG]",     /*                                     */
+    "MDRP[pmB]",     /*                                     */
+    "MDRP[pmW]",     /*                                     */
+    "MDRP[pm?]",     /*                                     */
+    "MDRP[pmrG]",    /*                                     */
+    "MDRP[pmrB]",    /*                                     */
+    "MDRP[pmrW]",    /*                                     */
+    "MDRP[pmr?]",    /*                                     */
 
-    "MIRP[G]"        /*                                     */
-    "MIRP[B]"        /*                                     */
-    "MIRP[W]"        /*                                     */
-    "MIRP[?]"        /*                                     */
-    "MIRP[rG]"       /*                                     */
-    "MIRP[rB]"       /*                                     */
-    "MIRP[rW]"       /*                                     */
-    "MIRP[r?]"       /*                                     */
-    "MIRP[mG]"       /*                                     */
-    "MIRP[mB]"       /*                                     */
-    "MIRP[mW]"       /*                                     */
-    "MIRP[m?]"       /*                                     */
-    "MIRP[mrG]"      /*                                     */
-    "MIRP[mrB]"      /*                                     */
-    "MIRP[mrW]"      /*                                     */
-    "MIRP[mr?]"      /*                                     */
-    "MIRP[pG]"       /*                                     */
-    "MIRP[pB]"       /*                                     */
+    "MIRP[G]",       /*                                     */
+    "MIRP[B]",       /*                                     */
+    "MIRP[W]",       /*                                     */
+    "MIRP[?]",       /*                                     */
+    "MIRP[rG]",      /*                                     */
+    "MIRP[rB]",      /*                                     */
+    "MIRP[rW]",      /*                                     */
+    "MIRP[r?]",      /*                                     */
+    "MIRP[mG]",      /*                                     */
+    "MIRP[mB]",      /*                                     */
+    "MIRP[mW]",      /*                                     */
+    "MIRP[m?]",      /*                                     */
+    "MIRP[mrG]",     /*                                     */
+    "MIRP[mrB]",     /*                                     */
+    "MIRP[mrW]",     /*                                     */
+    "MIRP[mr?]",     /*                                     */
+    "MIRP[pG]",      /*                                     */
+    "MIRP[pB]",      /*                                     */
 
-    "MIRP[pW]"       /*                                     */
-    "MIRP[p?]"       /*                                     */
-    "MIRP[prG]"      /*                                     */
-    "MIRP[prB]"      /*                                     */
-    "MIRP[prW]"      /*                                     */
-    "MIRP[pr?]"      /*                                     */
-    "MIRP[pmG]"      /*                                     */
-    "MIRP[pmB]"      /*                                     */
-    "MIRP[pmW]"      /*                                     */
-    "MIRP[pm?]"      /*                                     */
-    "MIRP[pmrG]"     /*                                     */
-    "MIRP[pmrB]"     /*                                     */
-    "MIRP[pmrW]"     /*                                     */
+    "MIRP[pW]",      /*                                     */
+    "MIRP[p?]",      /*                                     */
+    "MIRP[prG]",     /*                                     */
+    "MIRP[prB]",     /*                                     */
+    "MIRP[prW]",     /*                                     */
+    "MIRP[pr?]",     /*                                     */
+    "MIRP[pmG]",     /*                                     */
+    "MIRP[pmB]",     /*                                     */
+    "MIRP[pmW]",     /*                                     */
+    "MIRP[pm?]",     /*                                     */
+    "MIRP[pmrG]",    /*                                     */
+    "MIRP[pmrB]",    /*                                     */
+    "MIRP[pmrW]",    /*                                     */
     "MIRP[pmr?]"     /*                                     */
   };
 
